# sahara-tests

./: .coveragerc  .gitignore  .gitreview  .stestr.conf  .zuul.yaml  CONTRIBUTING.rst  HACKING.rst  README.rst  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
doc/: requirements.txt
doc/source/: conf.py  index.rst  releasenotes.rst  scenario.rst  tempest-plugin.rst
etc/scenario/: simple-testcase.yaml
playbooks/: sahara-tests-scenario.yaml
releasenotes/notes/: add-ability-to-use-clouds-yaml-5f66a2c3959f894b.yaml  add-cdh-513-c4feaf4f360122ff.yaml  add-cli-for-ng-cbdcdddd5195c333.yaml  drop-py-2-7-188a5c85a436ee4f.yaml  fix-bug-1644747-5f9790ad2a0e5e56.yaml  fix-datasource-discovery-b690920189f0b161.yaml  fix-installed-resource-discovery-36ffa157cf9b06b9.yaml  fix-ngt-create-cli-test-with-multiple-plugin-version-13ed695ad2d8fab1.yaml  fix-storm-scenario-template-2d28644c9fd2ec06.yaml  force-pem-ssh-keys-2cc9eb30a76c8dd1.yaml  import-tempest-client-tests-9042d5d50bbdce9e.yaml  increase-cluster-timeout-0e97fb7d7a6ea75a.yaml  migrate-to-keystoneauth-c65c162d74b5d7b9.yaml  migrated-sahara-cli-tests-a2b32eeb6ec11512.yaml  more-auth-fixes-9ba23ceb54ba042a.yaml  new-cli-tests-job-type-4fdc68dfda728cd3.yaml  post-030-preocata-40c5fbf4d3522074.yaml  remove-nova-network-09a2afd1efd83e05.yaml  remove-old-yaml-files-97ecb4a11582f033.yaml  sahara-api-tempest-tests-as-plugin-25d63ac04902f1ad.yaml  sahara-scenario-fix-runner-59350d608d19caf9.yaml  sahara-tempest-tests-apiv2-c9878e0ba37fba2a.yaml  saharaclient-version-75ca47761f133743.yaml  scenario-boot-from-volume-a87c680b03f560a0.yaml  scenario-feature-sets-ac3e0e9e40b236bb.yaml  scenario-runner-templatesdebug-5ee5e2447cff770a.yaml  scenario-s3-20d41440d84af3a9.yaml  scenario-tests-apiv2-c71c72f51c667075.yaml  simplify-testrunner-config-d3a19014db107ff1.yaml  start-using-reno-ef5696b99f56dc5e.yaml  support-non-fake-plugin-a4ba718b787246e8.yaml  (+13 more)
sahara_cli_tests/: README.rst  base.py  cluster_templates.py  clusters.py  data_sources.py  images.py  job_binaries.py  job_templates.py  job_types.py  jobs.py  node_group_templates.py  plugins.py  test_readonly_sahara.py  test_scenario.py
sahara_tempest_plugin/: README.rst  clients.py  config.py  plugin.py
sahara_tests/: version.py
tools/: cover.sh  lintstack.py
(+179 files in other folders)
