[metadata]
name = sahara-tests
summary = Sahara tests
description-file = README.rst
license = Apache Software License
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = https://docs.openstack.org/sahara-tests/latest/

[global]
setup-hooks = pbr.hooks.setup_hook

[files]
packages =
    sahara_tests
    sahara_tempest_plugin

data_files =
    etc/sahara-scenario = etc/*

[entry_points]
console_scripts =
    sahara-scenario = sahara_tests.scenario.runner:main

tempest.test_plugins =
    sahara_tempest_tests = sahara_tempest_plugin.plugin:SaharaTempestPlugin

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
warning-is-error = 1
