[metadata]
name = sahara-tests
summary = Sahara tests
description_file = README.rst
license = Apache Software License
python_requires = >=3.6
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = https://docs.openstack.org/sahara-tests/latest/

[global]
setup-hooks = pbr.hooks.setup_hook

[files]
packages =
    sahara_tests
    sahara_tempest_plugin

data_files =
    etc/sahara-scenario = etc/*

[entry_points]
console_scripts =
    sahara-scenario = sahara_tests.scenario.runner:main

tempest.test_plugins =
    sahara_tempest_tests = sahara_tempest_plugin.plugin:SaharaTempestPlugin

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
warning-is-error = 1
